--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,5 +1,8 @@
 _repo: Madame-Chrysantheme-Volume-4_3994
-_version: 0.1.0
+_version: 0.2.0
+covers:
+- cover_type: generated
+  image_path: cover.png
 creator:
   author:
     agent_name: Loti, Pierre
@@ -12,6 +15,8 @@ creator:
     url: http://www.gutenberg.org/2009/agents/853
     wikipedia: http://en.wikipedia.org/wiki/Pierre_Loti
 description: ''
+edition_identifiers:
+  edition_id: http://www.gutenberg.org/ebooks/3994#Madame-Chrysantheme-Volume-4
 gutenberg_issued: '2003-04-01'
 gutenberg_type: Text
 identifiers:
