--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,5 +1,5 @@
 _repo: Madame-Chrysantheme-Volume-4_3994
-_version: 0.2.0
+_version: 0.2.1
 covers:
 - cover_type: generated
   image_path: cover.png
@@ -28,5 +28,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcsh 'Japan -- Fiction'
 - !lcc 'PQ'
+- GITenberg
 title: Madame Chrysantheme — Volume 4
 url: http://www.gutenberg.org/ebooks/3994
